--- a/LanguageLearningApp/LanguageLearningApp.WebAPI/appsettings.json
+++ b/LanguageLearningApp/LanguageLearningApp.WebAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source =LanguageLearningDB"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
