--- a/LanguageLearningApp/LanguageLearningApp.Core/LanguageLearningApp.Core.csproj
+++ b/LanguageLearningApp/LanguageLearningApp.Core/LanguageLearningApp.Core.csproj
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Constants\" />
-    <Folder Include="Interfaces\Services\" />
-    <Folder Include="Interfaces\Repository\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
