--- a/LanguageLearningApp/LanguageLearningApp.Infrastructure/LanguageLearningApp.Infrastructure.csproj
+++ b/LanguageLearningApp/LanguageLearningApp.Infrastructure/LanguageLearningApp.Infrastructure.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LanguageLearningApp.Core\LanguageLearningApp.Core.csproj" />
   </ItemGroup>
 
