--- a/WebClient/package.json
+++ b/WebClient/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^3.1.0"
   },
