--- a/LanguageLearningApp/LanguageLearningApp.Infrastructure/LanguageLearningApp.Infrastructure.csproj
+++ b/LanguageLearningApp/LanguageLearningApp.Infrastructure/LanguageLearningApp.Infrastructure.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\LanguageLearningApp.Core\LanguageLearningApp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
