--- a/WebClient/package.json
+++ b/WebClient/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-popup": "^0.11.0",
+    "react-popup-alert": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
