--- a/LanguageLearningApp/LanguageLearningApp.Service/LanguageLearningApp.Service.csproj
+++ b/LanguageLearningApp/LanguageLearningApp.Service/LanguageLearningApp.Service.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.5.0" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LanguageLearningApp.Core\LanguageLearningApp.Core.csproj" />
     <ProjectReference Include="..\LanguageLearningApp.Infrastructure\LanguageLearningApp.Infrastructure.csproj" />
   </ItemGroup>
